제출 바로 전 commit

--- a/src/main/webapp/form.html
+++ b/src/main/webapp/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>form</title>
@@ -17,12 +17,12 @@
 <body>
 <div class="container">
     <div style="...">
-        <h1>Add User</h1>
+        <h1>새로운 사용자 정보 추가</h1>
     </div>
     <form class="row g-3" action="form_ok.jsp" method="post">
         <div class="col-md-6">
             <label for="inputName" class="form-label">Name</label>
-            <input type="name" class="form-control" id="inputName" name="name" placeholder="KimHandong">
+            <input type="text" class="form-control" id="inputName" name="name" placeholder="KimHandong">
         </div>
         <div class="col-md-6" class="checkboxes">
             <label for="urgender">Gender:</label><br>
@@ -31,7 +31,7 @@
         </div>
         <div class="col-md-6">
             <label for="inputEmail4" class="form-label">Email</label>
-            <input type="email" class="form-control" id="inputEmail4" name="email">
+            <input type="text" class="form-control" id="inputEmail4" name="email">
         </div>
         <div class="col-md-6">
             <label for="inputPassword4" class="form-label">Password</label>
